--- a/css/intro.css
+++ b/css/intro.css
@@ -39,10 +39,10 @@
 .intro-p {
   color: #b2b2b2;
   font-size: 24px;
+  line-height: 1.5;
 }
 
 .intro-conteudo a {
-  color: inherit;
   display: inline-block;
   margin-top: 40px;
   padding: 16px 24px;
@@ -56,4 +56,50 @@
 
 .intro-conteudo a:hover {
   background-image: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px) {
+  .intro-conteudo a {
+    padding: 12px 16px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .intro-h1 {
+    font-size: 48px;
+  }
+  .intro-p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 800px) {
+  .intro-h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+  }
+
+  .intro-bg {
+    background-color: #111111;
+    box-shadow: inset 0 -60px;
+  }
+  .intro-conteudo a {
+    margin-top: 24px;
+    margin-bottom: 24px;
+  }
+
+  .intro {
+    grid-template-columns: 1fr;
+    gap: 0px 20px;
+  }
+
+  .intro-conteudo {
+    padding-bottom: 0px;
+  }
+
+  .intro img {
+    height: 300px;
+    width: 100%;
+  }
 }
