--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-  background-color: #000000;
+  background-color: var(--cor-12);
 }
 
 .header {
@@ -22,7 +22,6 @@
 
 .header-menu a {
   padding: 16px 0px;
-  color: #ffffff;
   display: inline-block;
   font-size: 18px;
   position: relative;
@@ -45,7 +44,7 @@
 
 @media (max-width: 800px) {
   .header-menu a {
-    background-color: #111111;
+    background-color: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
@@ -55,7 +54,7 @@
   }
 
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--cor-10);
   }
 
   .header-menu {
