--- a/css/home/intro.css
+++ b/css/home/intro.css
@@ -1,7 +1,7 @@
 .intro-bg {
-  background-color: #000000;
-  color: #ffffff;
-  box-shadow: inset 0px -120px #ffffff;
+  background-color: var(--cor-12);
+  color: var(--cor-0);
+  box-shadow: inset 0px -120px var(--cor-0);
 }
 
 .intro {
@@ -26,36 +26,14 @@
 }
 
 .intro-h1 {
-  color: #ffffff;
   margin-bottom: 40px;
   line-height: 1.125;
   font-size: 64px;
 }
 
-.intro-h1 span {
-  color: #ffbb00;
-}
-
 .intro-p {
-  color: #b2b2b2;
   font-size: 24px;
   line-height: 1.5;
-}
-
-.intro-conteudo a {
-  display: inline-block;
-  margin-top: 40px;
-  padding: 16px 24px;
-  border-radius: 4px;
-  color: #332200;
-  font-weight: bold;
-  text-transform: uppercase;
-  background-image: linear-gradient(#ffbf00, #f2a50c);
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1) #ffffff;
-}
-
-.intro-conteudo a:hover {
-  background-image: linear-gradient(#ffb60d, #e59317);
 }
 
 @media (max-width: 600px) {
@@ -81,7 +59,7 @@
   }
 
   .intro-bg {
-    background-color: #111111;
+    background-color: var(--cor-11);
     box-shadow: inset 0 -60px;
   }
   .intro-conteudo a {
