--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 /* home */
 @import url(./home/intro.css);
 @import url(./home/bikes-home.css);
+@import url(./home/tecnologia.css);
 
 /* utilidades */
 @import url(./utilidades/cores.css);
