--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,10 @@
+.container {
+  max-width: 1200px;
+  box-sizing: border-box;
+  padding: 20px;
+  margin: 0 auto;
+}
+
 .botao {
   display: inline-block;
   margin-top: 40px;
@@ -12,4 +19,11 @@
 
 .botao:hover {
   background-image: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px) {
+  .botao {
+    padding: 12px 16px;
+    font-size: 14px;
+  }
 }
