--- a/css/home/tecnologia.css
+++ b/css/home/tecnologia.css
@@ -34,8 +34,25 @@
   margin-bottom: 32px;
 }
 
-.tecnologia-conteudo a {
-  margin-bottom: 80px;
+.link {
+  display: block;
+  padding-top: 40px;
+  padding-bottom: 60px;
+  position: relative;
+  width: max-content;
+}
+
+.link::after {
+  content: "";
+  width: 100%;
+  height: 4px;
+  display: block;
+  background-color: currentColor;
+  position: absolute;
+}
+
+.link:hover {
+  color: var(--cor-0);
 }
 
 .tecnologia-vantagens {
