--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,16 @@
 
 /* home */
 @import url(./home/intro.css);
-@import url(./home/bikes-home.css);
 @import url(./home/tecnologia.css);
+@import url(./home/parceiros.css);
 
 /* utilidades */
 @import url(./utilidades/cores.css);
 @import url(./utilidades/tipografia.css);
 @import url(./utilidades/componentes.css);
+
+/* bicicletas */
+@import url(./bicicletas.css/bikes-home.css);
+
+/* depoimento */
+@import url(./depoimento/depoimento.css);
