--- a/css/depoimento/depoimento.css
+++ b/css/depoimento/depoimento.css
@@ -65,9 +65,13 @@
 
 @media (max-width: 700px) {
   .depoimento-conteudo blockquote {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    width: 20ch;
   }
   .depoimento-conteudo span {
     font-size: 1.3rem;
+  }
+  .depoimento-conteudo {
+    padding-left: 60px;
   }
 }
