--- a/css/depoimento/depoimento.css
+++ b/css/depoimento/depoimento.css
@@ -34,7 +34,7 @@
 
 .depoimento-conteudo {
   align-content: end;
-  padding: 0px 0 144px 80px;
+  padding: 40px 40px 144px 80px;
   background-color: var(--cor-p1);
 }
 
@@ -55,7 +55,7 @@
     text-align: center;
   }
   .depoimento-conteudo {
-    padding: 0px 80px 40px;
+    padding: 40px 80px 40px;
   }
 
   .depoimento-conteudo span {
