--- a/css/seguro/seguro.css
+++ b/css/seguro/seguro.css
@@ -47,6 +47,7 @@
 .seguro-container h2 {
   grid-column: 1/-1;
   padding-top: 60px;
+  padding: 20px;
   padding-bottom: 80px;
 }
 
@@ -64,4 +65,19 @@
   padding: 40px;
   border-radius: 4px;
   margin-bottom: 80px;
+}
+
+@media (max-width: 900px) {
+  .seguro-container {
+    grid-template-columns: 1fr;
+  }
+  .seguro {
+    margin-bottom: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .seguro-container h2 {
+    padding-bottom: 40px;
+  }
 }
