--- a/css/seguro/seguro.css
+++ b/css/seguro/seguro.css
@@ -7,8 +7,11 @@
   grid-template-columns: 1fr 1fr;
   max-width: 1200px;
   margin: 0 auto;
+  box-sizing: border-box;
   gap: 0px 60px;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .seguro p {
