--- a/css/global/header.css
+++ b/css/global/header.css
@@ -7,6 +7,11 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .header-menu {
