--- a/css/global/header.css
+++ b/css/global/header.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-sizing: border-box;
   flex-wrap: wrap;
   max-width: 1200px;
   margin: 0 auto;
