adicionando aria-label em algumas paginas e adicionando nova página de seguros

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@
 @import url(./depoimento/depoimento.css);
 
 /* seguro */
+@import url(./seguro/seguro-home.css);
 @import url(./seguro/seguro.css);
 
 /* termos */
