--- a/css/seguro/seguro.css
+++ b/css/seguro/seguro.css
@@ -4,13 +4,15 @@
 .vantagens {
   padding-top: 80px;
   padding-bottom: 80px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 .vantagens h2 {
   margin-bottom: 80px;
 }
 .vantagens-lista {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(280px, max-content));
   gap: 40px;
 }
 
@@ -20,4 +22,14 @@
 
 .vantagens-lista h3 {
   margin-bottom: 12px;
+}
+
+@media (max-width: 600px) {
+  .vantagens {
+    padding-top: 40px;
+  }
+  .vantagens h2 {
+    font-size: 2.8rem;
+    margin-bottom: 50px;
+  }
 }
