--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 /* seguro */
 @import url(./seguro/seguro-home.css);
 @import url(./seguro/seguro.css);
+@import url(./seguro/perguntas.css);
 
 /* termos */
 @import url(./termos/termo.css);
