adicionando paginas individuais de cada modelo bikcraft

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 /* bicicletas */
 @import url(./bicicletas/bikes-home.css);
 @import url(./bicicletas/bicicletas.css);
+@import url(./bicicleta/bicicleta.css);
 
 /* depoimento */
 @import url(./depoimento/depoimento.css);
