--- a/css/bicicletas/bicicletas.css
+++ b/css/bicicletas/bicicletas.css
@@ -1,15 +1,15 @@
-.bicicleta {
+.bicicletas {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
   margin-top: 40px;
 }
 
-.bicicleta:nth-child(4) {
+.bicicletas:nth-child(4) {
   margin-bottom: 40px;
 }
 
-.bicicleta-bg {
+.bicicletas-bg {
   background-image: linear-gradient(
     to right,
     var(--cor-0) 30%,
@@ -17,11 +17,11 @@
   );
 }
 
-.bicicleta-imagem {
+.bicicletas-imagem {
   position: relative;
 }
 
-.bicicleta-imagem span {
+.bicicletas-imagem span {
   content: "";
   position: absolute;
   top: 0px;
@@ -32,13 +32,13 @@
   border-radius: 4px 0px 0px 4px;
 }
 
-.bicicleta-lista li {
+.bicicletas-lista li {
   display: flex;
   gap: 8px;
   align-items: center;
 }
 
-.bicicleta-lista {
+.bicicletas-lista {
   display: grid;
   gap: 12px;
 }
@@ -47,40 +47,40 @@
   width: 24px;
 }
 
-.bicicleta-conteudo {
+.bicicletas-conteudo {
   display: grid;
   grid-template-columns: 1fr auto;
   place-content: start;
 }
 
-.bicicleta-conteudo h3,
-.bicicleta-conteudo p {
+.bicicletas-conteudo h3,
+.bicicletas-conteudo p {
   grid-column: 1/-1;
   margin-bottom: 16px;
 }
 
-.bicicleta-conteudo .botao {
+.bicicletas-conteudo .botao {
   place-self: end;
 }
 
 @media (max-width: 900px) {
-  .bicicleta {
+  .bicicletas {
     grid-template-columns: 1fr;
   }
-  .bicicleta-conteudo {
+  .bicicletas-conteudo {
     grid-template-columns: 1fr;
   }
-  .bicicleta-conteudo .botao {
+  .bicicletas-conteudo .botao {
     place-self: start;
   }
-  .bicicleta-bg {
+  .bicicletas-bg {
     background-image: linear-gradient(
       to right,
       var(--cor-0) 0%,
       var(--cor-12) 0%
     );
   }
-  .bicicleta-lista {
+  .bicicletas-lista {
     grid-template-columns: 1fr 1fr;
   }
 }
