--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -19,6 +19,9 @@
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1) var(--cor-0);
 }
 
+#bicicleta .botao {
+  margin-top: 0px;
+}
 .botao:hover {
   background-image: linear-gradient(#ffb60d, #e59317);
 }
