--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
 @import url(./seguro/seguro-home.css);
 @import url(./seguro/seguro.css);
 @import url(./seguro/perguntas.css);
+@import url(./seguro/segurobicicleta.css);
 
 /* termos */
 @import url(./termos/termo.css);
