--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 @import url(./utilidades/cores.css);
 @import url(./utilidades/tipografia.css);
 @import url(./utilidades/componentes.css);
+@import url(./utilidades/formulario.css);
 
 /* bicicletas */
 @import url(./bicicletas/bikes-home.css);
@@ -26,6 +27,10 @@
 @import url(./seguro/seguro.css);
 @import url(./seguro/perguntas.css);
 @import url(./seguro/segurobicicleta.css);
+
+/* contato */
+@import url(./contato/contato.css);
+@import url(./contato/lojas.css);
 
 /* termos */
 @import url(./termos/termo.css);
